Fix and update Github Actions config

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid} on {host}
 inventory = inventory.yaml
+timeout = 900
 
 [ssh_connection]
 ssh_args = -o StrictHostKeyChecking=accept-new
