--- a/ansible/vyos/main.yaml
+++ b/ansible/vyos/main.yaml
@@ -9,11 +9,10 @@
         dest: "/config/config.boot"
       register: config_change
       check_mode: yes
-      diff: yes
     - name: "Copy the new config"
       template:
         src: "config.j2"
-        dest: "/home/ansible/configs/config.boot"
+        dest: "/home/ansible/config.boot"
       when: config_change.changed
 
 - name: Update config
@@ -25,7 +24,7 @@
       vyos.vyos.vyos_command:
         commands:
           - configure
-          - load /home/ansible/configs/config.boot
+          - load /home/ansible/config.boot
           - commit
           - save
       when: hostvars['vyos_ssh']['config_change'].changed
@@ -47,15 +46,10 @@
   vars_files:
     - secret.yaml
   tasks:
-    - name: Render ssh private key
-      copy:
-        content: "{{ on_prem_configs_ssh_key }}"
-        dest: "/tmp/on-prem-configs-ssh-key"
     - name: Download the on-prem-configs repo
       git:
         repo: git@github.com:rlacko58/on-prem-configs.git
         dest: /tmp/on-prem-configs
-        key_file: /tmp/on-prem-configs-ssh-key
         force: yes
     - name: "Copy new file, commit changes, push"
       shell: |
@@ -63,5 +57,4 @@
         yes | cp -i /tmp/latest-config.boot ./vyos-config
         git config user.name "Laszlo Rafael"
         git config user.email "rlacko99@gmail.com"
-        git config core.sshCommand "ssh -i /tmp/on-prem-configs-ssh-key"
         if [[ -n $(git status -s) ]]; then git commit -am "Add Vyos change - `date`"; git push origin main; fi
