--- a/.github/workflows/vyos-router.yml
+++ b/.github/workflows/vyos-router.yml
@@ -2,16 +2,59 @@ name: Update VyOS Config
 run-name: Update VyOS Config
 on: [push]
 jobs:
-  Explore-GitHub-Actions:
+  run-vyos-ansible-pipeline:
     runs-on: ubuntu-latest
     steps:
-      - name: Run playbook
-        uses: dawidd6/action-ansible-playbook@v2
+      - uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v4
         with:
-          playbook: config-playbook/main.yml
-          directory: ./vyos-router
-          key: ${{secrets.SSH_PRIVATE_KEY}}
-          vault_password: ${{ secrets.ANSIBLE_VAULT_PASSWORD }}
-          requirements: requirements.galaxy.yaml
-        options: |
-          --extra-vars ansible_password=${{ secrets.VYOS_PASSWORD }}
+          python-version: 3.11
+      - name: Cache
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: ./ansible/env
+          key: ${{ runner.os }}-env-v3-${{ hashFiles('**/requirements.txt') }}
+      - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        working-directory: ./ansible
+        run: |
+          python3 -m venv env
+          source env/bin/activate
+          python3 -m pip install --upgrade pip
+          python3 -m pip install -r requirements.txt
+      - name: SSH setup
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+          SSH_CONFIG: |
+            Host *
+              Port 22
+              User ansible
+              AddKeysToAgent yes
+              StrictHostKeyChecking no
+              ForwardAgent yes
+              ConnectTimeout 30
+              KexAlgorithms curve25519-sha256@libssh.org,diffie-hellman-group-exchange-sha256
+              MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
+              Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
+              ServerAliveInterval 10
+              LogLevel DEBUG1
+          SSH_KNOWN_HOSTS: |
+            # 152.66.211.122:22 SSH-2.0-OpenSSH_8.4p1
+            152.66.211.122 ecdsa-sha2-nistp256 AAAAE2VjZHNhLXNoYTItbmlzdHAyNTYAAAAIbmlzdHAyNTYAAABBBP47vJZ+oHSxj0FgzYrOX+8DLLaclHtDyBUVZpNv9MXvQEESbpijJP+Mk/Xgs4G9WSCd5OEjBW2jh/Y+cCDkvPE=
+            # 152.66.211.122:22 SSH-2.0-OpenSSH_8.4p1
+            152.66.211.122 ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIHocb/LlH0aNVv0I9B0h6rB/PraqRL6cUKrGS2OoEkOj
+        run: |
+          mkdir -p ~/.ssh
+          echo $SSH_KNOWN_HOSTS > ~/.ssh/known_hosts
+          echo $SSH_CONFIG > ~/.ssh/config
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+          ssh-add ~/.ssh/id_ed25519
+      - name: Deploy via ansible
+        working-directory: ./ansible
+        run: |
+          source env/bin/activate
+          ansible-playbook vyos/main.yaml -i inventory.yaml --vault-password-file <(echo ${{ secrets.ANSIBLE_VAULT_PASSWORD }})
